fixed wordle boxes columns gaps

--- a/wordle/style.scss
+++ b/wordle/style.scss
@@ -22,7 +22,7 @@ main{
 .board{
     text-transform: uppercase;
     margin: 0 auto;
-    width: 70%;
+    width: 370px;
     display: grid;
     place-items: centre;
 
